--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       </div>
       <div class="col1of2">
         <ul class="navigation">
-          <li><a href="#">Магазин</a></li>
-          <li><a href="#">Доставка и оплата</a></li>
-          <li><a href="#">О нас</a></li>
+          <li><a href="/">Магазин</a></li>
+          <li><a href="delivery.html">Доставка и оплата</a></li>
+          <li><a href="about.html">О нас</a></li>
         </ul>
       </div>
       <div class="col1of4">
