Fixed basic styles for shop

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <div class="wrapper">
     <div class="header row">
       <div class="col1of4">
-        <img src="images/logo.png" alt="" />
+        <a href="/"><img src="images/logo.png" alt="" /></a>
       </div>
       <div class="col1of2">
         <ul class="navigation">
@@ -20,7 +20,11 @@
       </div>
       <div class="col1of4">
         <div class="cart">
-
+          <div>
+            <script type="text/javascript" src="http://app.ecwid.com/script.js?2231022" charset="utf-8"></script>
+            <!-- remove layout parameter if you want to position minicart yourself -->
+            <script type="text/javascript"> xMinicart("style=","layout=attachToCategories"); </script>
+          </div>
         </div>
       </div>
     </div>
@@ -34,7 +38,7 @@
         </div>
       </div>
     </div>
-    <div class="footer">
+    <div class="footer row">
       <div class="left"></div>
       <div class="right">
         &copy; tanya.in.ua
