--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="wrapper">
     <div class="header row">
       <div class="col1of4">
-        <img src="images/logo.png" alt="" />
+        <a href="/"><img src="images/logo.png" alt="" /></a>
       </div>
       <div class="col1of2">
         <ul class="navigation">
@@ -21,7 +21,7 @@
       <div class="col1of4">
         <div class="cart">
           <div>
-          <script type="text/javascript" src="http://app.ecwid.com/script.js?2275337" charset="utf-8"></script>
+          <script type="text/javascript" src="http://app.ecwid.com/script.js?2231022" charset="utf-8"></script>
           <!-- remove layout parameter if you want to position minicart yourself -->
           <script type="text/javascript"> xMinicart("style=","layout=attachToCategories"); </script>
           </div>
@@ -30,12 +30,12 @@
     </div>
     <div class="body">
       <div>
-      <script type="text/javascript" src="http://app.ecwid.com/script.js?2275337" charset="utf-8"></script>
+      <script type="text/javascript" src="http://app.ecwid.com/script.js?2231022" charset="utf-8"></script>
       <script type="text/javascript"> xProductBrowser("categoriesPerRow=3","views=grid(3,3) list(10) table(20)","categoryView=grid","searchView=list","style="); </script>
-      <noscript>Ваш браузер не поддерживает JavaScript. Пожалуйста, перейдите на <a href="http://app.ecwid.com/jsp/2275337/catalog">HTML версию Александр Чаплинский's store</a></noscript>
+      <noscript>Ваш браузер не поддерживает JavaScript. Пожалуйста, перейдите на <a href="http://app.ecwid.com/jsp/2231022/catalog">HTML версию Hugster store</a></noscript>
       </div>
     </div>
-    <div class="footer">
+    <div class="footer row">
       <div class="left"></div>
       <div class="right">
         &copy; tanya.in.ua
