--- a/about.html
+++ b/about.html
@@ -39,7 +39,30 @@
       </div>
     </div>
     <div class="footer row">
-      <div class="left"></div>
+       <div class="left mrm">
+          <div class="fb-like" data-href="http://hugster.me" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false"></div>
+        </div>
+        <div class="left">
+          <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://hugster.me" data-lang="ru">Твитнуть</a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+        </div>
+        <div class="left mrm">
+          <!-- Place this tag where you want the +1 button to render. -->
+          <div class="g-plusone" data-size="medium" data-annotation="none"></div>
+          <!-- Place this tag after the last +1 button tag. -->
+          <script type="text/javascript">
+            window.___gcfg = {lang: 'ru'};
+
+            (function() {
+              var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+              po.src = 'https://apis.google.com/js/plusone.js';
+              var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+            })();
+          </script>
+        </div>
+        <div class="left">
+          <a href="//pinterest.com/pin/create/button/" data-pin-do="buttonBookmark" ><img src="//assets.pinterest.com/images/pidgets/pin_it_button.png" /></a>
+        </div>
       <div class="right">
         &copy; tanya.in.ua
       </div>
