Adde favicons and logos

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Hugster</title>
+  <link rel="shortcut icon" href="images/favicon.ico" />
   <link rel="stylesheet" href="stylesheets/application.css" />
 </head>
 <body>
