--- a/about.html
+++ b/about.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Hugster</title>
+  <link rel="shortcut icon" href="images/favicon.ico" />
   <link rel="stylesheet" href="stylesheets/application.css" />
 </head>
 <body>
   <div class="wrapper">
     <div class="header row">
       <div class="col1of4">
-        <a href="/"><img src="images/logo.png" alt="" /></a>
+        <a href="/"><img src="images/logo-2.png" alt="" /></a>
       </div>
       <div class="col1of2">
         <ul class="navigation">
