--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
       <div class="col1of2">
         <ul class="navigation">
-          <li><a href="/">Магазин</a></li>
+          <li>Магазин</li>
           <li><a href="delivery.html">Доставка и оплата</a></li>
           <li><a href="about.html">О нас</a></li>
         </ul>
