--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
       <div class="row">
         <div class="col1of2">
           <h1>О нас с магазином</h1>
-          <p>Хагстер в переводе с американского (hug+gangster, hug+hamster) современного жаргона – это брутальный мужик, который, не смотря на свой грозный вид, любит котиков и всякое мимими. Испытывая нежную привязанность к брутально-милому стилю и джунгарским хомячкам, я назвала магазин этим чудесным словом. Меня зовут Таня. Помимо магазина я занимаюсь (тоже дизайном).</p>
+          <p>Хагстер в переводе с американского (hug+gangster, hug+hamster) современного жаргона – это брутальный мужик, который, не смотря на свой грозный вид, любит котиков и всякое мимими. Испытывая нежную привязанность к брутально-милому стилю и джунгарским хомячкам, я назвала магазин этим чудесным словом. Помимо магазина я занимаюсь (тоже дизайном).</p>
           <p>Каждая вещь придумана, нарисована, произведена, завернута и упакована с нежностью и вниманием, потому что это очень приятно – представить, как вы эту коробочку откроете.</p>
           <p>По всем вопросам пишите на: <a href="mailto:gutiusha@gmail.com">gutiusha@gmail.com</a></p>
         </div>
