--- a/delivery.html
+++ b/delivery.html
@@ -32,20 +32,17 @@
     <div class="body">
       <div class="row">
         <div class="col3of4 prm">
-          <h1>Как все работает</h1>
-          <p>Географически магазин находится в Киеве. Доставляет товары по Украине, а также в любую страну, где покупатели с пониманием относятся ко временному отсутствию возможности расплатиться через PayPal :-)</p>
-          <p>По всем вопросам пишите на: <a href="mailto:gutiusha@gmail.com">gutiusha@gmail.com</a><br />
-            Или звоните по телефону: +38 097 483-73-53</p>
+          <h1>Доставка</h1>
+          <p>Географически магазин находится в Киеве. За пределы Киева товар доставляется согласно условиям и тарифам почтового перевозчика за счет заказчика. В Киеве заказ можно забрать со склада не далеко от метро «Дарница» либо заказать доставку.</p>
+          <p>Стоимость доставки по Киеву – 35 грн.</p>
+          <p>По всем вопросам пишите нам на: <a href="mailto:gutiusha@gmail.com">hugsterhug@gmail.com</a></p>
 
-            <h2>Cпособы оплаты заказа</h2>
-            <p>1. Наличными курьеру в момент получения заказа. Такая возможность есть только в Киеве.<br />
-            2. Банковским переводом с расчетного счета в любом банке. Вы можете либо скачать квитанцию для оплаты в Сбербанке, либо по указанным реквизитам создать свою квитанцию для оплаты в любом банке. После оплаты для ускорения идентификации платежа обязательно присылайте по адресу <a href="mailto:gutiusha@gmail.com">gutiusha@gmail.com</a> копию квитанции или платежного поручения.</p>
-
-            <h2>Доставка</h2>
-            <p>Доставка заказов осуществляется по Украине, по Украине и по Беларуси при соблюдении определенных условий. <br />
-            В Киеве заказ можно получить самовывозом либо заказав доставку. Администратор свяжется c вами в течение двух рабочих дней с момента заказа, чтобы согласовать детали.</p>
-            <p>Стоимость доставки по Киеву – 35 грн.</p>
-            <p>Самовывоз осуществляется со склада в районе парка Победы либо от метро "Дарница" или "Левобережная" по предварительной договоренности. </p>
+            <h1>Cпособы оплаты заказа</h1>
+            <p>1. Наличными курьеру при получении заказа.<br />
+            2. Денежным пополнением на счет ПриватБанка.
+            3. Qiwi Кошелек (для оплаты в российских рублях)
+            4. Наложенный платеж. Предполагает оплату посылки адресатом непосредственно при получении. Стоимость наложенного платежа - это стоимость заказанной продукции, куда входит и стоимость доставки до региона получателя. 
+            </p>
 
         </div>
       </div>
