--- a/delivery.html
+++ b/delivery.html
@@ -33,16 +33,18 @@
       <div class="row">
         <div class="col3of4 prm">
           <h1>Доставка</h1>
-          <p>Географически магазин находится в Киеве. За пределы Киева товар доставляется согласно условиям и тарифам почтового перевозчика за счет заказчика. В Киеве заказ можно забрать со склада не далеко от метро «Дарница» либо заказать доставку.</p>
+          <p>Географически магазин находится в Киеве. За пределы Киева товар доставляется согласно условиям и тарифам почтового перевозчика за счет заказчика. </p>
+          <p>В Киеве заказ можно забрать со склада не далеко от метро «Дарница» либо заказать доставку.</p>
           <p>Стоимость доставки по Киеву – 35 грн.</p>
-          <p>По всем вопросам пишите нам на: <a href="mailto:gutiusha@gmail.com">hugsterhug@gmail.com</a></p>
 
             <h1>Cпособы оплаты заказа</h1>
-            <p>1. Наличными курьеру при получении заказа.<br />
-            2. Денежным пополнением на счет ПриватБанка.
-            3. Qiwi Кошелек (для оплаты в российских рублях)
-            4. Наложенный платеж. Предполагает оплату посылки адресатом непосредственно при получении. Стоимость наложенного платежа - это стоимость заказанной продукции, куда входит и стоимость доставки до региона получателя. 
+            <p>1. Наличными курьеру при получении заказа.</p>
+            <p>2. Денежным пополнением на счет ПриватБанка.</p>
+            <p>3. Qiwi Кошелек (для оплаты в российских рублях).</p>
+            <p>4. Наложенный платеж. Предполагает оплату посылки адресатом непосредственно при получении. Стоимость наложенного платежа – это стоимость заказанной продукции, куда входит и стоимость доставки до региона получателя. 
             </p>
+            <p>По всем вопросам пишите на: <a href="mailto:gutiusha@gmail.com">hugsterhug@gmail.com</a></p>
+            
 
         </div>
       </div>
