--- a/delivery.html
+++ b/delivery.html
@@ -34,8 +34,7 @@
         <div class="col3of4 prm">
           <h1>Доставка</h1>
           <p>Географически магазин находится в Киеве. За пределы Киева товар доставляется согласно условиям и тарифам почтового перевозчика за счет заказчика. </p>
-          <p>В Киеве заказ можно забрать со склада недалеко от метро «Дарница» или на Жилянской, 75, либо заказать доставку.</br>
-          Стоимость доставки по Киеву – 35 грн.</p>
+          <p>В Киеве заказ можно забрать со склада недалеко от метро «Дарница» или на Жилянской, 75, либо заказать доставку. Стоимость доставки по Киеву – 35 грн.</p>
 
             <h1>Cпособы оплаты заказа</h1>
             <p>1. Наличными курьеру при получении заказа.</p>
