--- a/about.html
+++ b/about.html
@@ -48,7 +48,8 @@
           <p>Хагстер (hug+gangster, hug+hamster) в переводе с американского современного жаргона – это брутальный мужик, который, несмотря на свой грозный вид, любит котиков и всякое мимими. Брутально милый магазин с этим названием состоит из двух человек, множества идей и одной нежной привязанности к общему делу.
           </p>
           <p> Каждая вещь придумана, нарисована, произведена и тщательно упакована с вниманием и теплотой, потому что это очень приятно – представить, как вы эту упаковочку откроете.</p>
-          <p>По всем вопросам пишите нам на: <a href="mailto:gutiusha@gmail.com">hugsterhug@gmail.com</a></p>
+          <p>По всем вопросам пишите нам: <a href="mailto:gutiusha@gmail.com">hugsterhug@gmail.com</a></p>
+          <p><a href='https://www.facebook.com/hugster.me' rel='nofollow'>https://www.facebook.com/hugster.me</a></p>
         </div>
       </div>
       <div class="instagram"></div>
