--- a/delivery.html
+++ b/delivery.html
@@ -42,7 +42,7 @@
             <p>3. Qiwi Кошелек (для оплаты в российских рублях).</p>
             <p>4. Наложенный платеж. Предполагает оплату посылки адресатом непосредственно при получении. Стоимость наложенного платежа – это стоимость заказанной продукции, куда входит и стоимость доставки до региона получателя. 
             </p>
-            <p>По всем вопросам пишите нам: <a href="mailto:gutiusha@gmail.com">hugsterhug@gmail.com</a></p>
+            <p>По всем вопросам пишите нам: <a href="mailto:gutiusha@gmail.com">hugsterhug@gmail.com</a></br><a href='https://www.facebook.com/hugster.me' rel='nofollow'>https://www.facebook.com/hugster.me</a></p>
             
 
         </div>
